--- a/.env
+++ b/.env
@@ -24,12 +24,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=db_xinyuanli
-DB_USERNAME=root
-DB_PASSWORD=
-# DB_DATABASE=u666521654_db_xinyuanli
-# DB_USERNAME=u666521654_db_xinyuanli
-# DB_PASSWORD=Xinyuanli@123
+# DB_DATABASE=db_xinyuanli
+# DB_USERNAME=root
+# DB_PASSWORD=
+DB_DATABASE=u666521654_db_xinyuanli
+DB_USERNAME=u666521654_db_xinyuanli
+DB_PASSWORD=Xinyuanli@123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
